public class main {
    public static void main(String[] args) {
        System.out.println("=== BIENVENIDO A UNO POO ===");
        Game juego = new Game();
        juego.jugar(); // La clase Game se encarga de todo
    }
}
